--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,10 @@ button {
   margin-left: 20px;
 }
 
+.home_page {
+  margin-top: 50px;
+} 
+
 .login_page {
   margin-top: 50px;
   text-align: center;
