--- a/src/index.css
+++ b/src/index.css
@@ -32,13 +32,38 @@ h1 {
  text-align: center; 
 }
 
+h2 {
+  text-align: center;
+}
+
+ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+li {
+  align-items: center;
+  justify-content: space-between;
+}
+
 button {
   margin-left: 20px;
 }
 
 .home_page {
   margin-top: 50px;
+  display: grid;
+  justify-content: center;
+  flex-direction: column;
 } 
+
+.about_page {
+  display: grid;	
+  justify-content: center;
+  text-align: center;
+}
 
 .login_page {
   margin-top: 50px;
